Update (lazygit + Helix).

--- a/helix/config.toml
+++ b/helix/config.toml
@@ -11,13 +11,17 @@ auto-pairs = true
 rulers = [120]
 idle-timeout = 50
 
-# [editor.gutter.characters]
-# diagnostics = ""
-# breakpoints.verified = "●"
-# breakpoints.other = "⊚"
-# diff.add = "▏"
-# diff.remove = "‾"
-# diff.change = "▏"
+[editor.gutters.diagnostics]
+characters = ""
+
+[editor.gutters.breakpoints.characters]
+verified = "●"
+other = "⊚"
+
+[editor.gutters.diff.characters]
+add = "▏"
+remove = "‾"
+change = "▏"
 
 [editor.cursor-shape]
 insert = "bar"
