--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -645,83 +645,78 @@ dim_opacity 0.75
 #: How much to dim text that has the DIM/FAINT attribute set. One
 #: means no dimming and zero means fully dimmed (i.e. invisible).
 
-selection_foreground #eaeaea
-
-#: The foreground for text selected with the mouse. A value of none
-#: means to leave the color unchanged.
-
-selection_background #404040
-
-#: The background for text selected with the mouse.
 
 
-#: The 16 terminal colors. There are 8 basic colors, each color has a
-#: dull and bright version. You can also set the remaining colors from
-#: the 256 color table as color16 to color255.
+# The basic colors
+foreground              #CAD3F5
+background              #24273A
+selection_foreground    #24273A
+selection_background    #F4DBD6
 
-color0 #363a4e
-color8 #666666
+# Cursor colors
+cursor                  #F4DBD6
+cursor_text_color       #24273A
 
-#: black
+# URL underline color when hovering with mouse
+url_color               #F4DBD6
 
-color1 #ec7279
-color9 #fc626b
+# Kitty window border colors
+active_border_color     #B7BDF8
+inactive_border_color   #6E738D
+bell_border_color       #EED49F
 
-#: red
+# OS Window titlebar colors
+wayland_titlebar_color system
+macos_titlebar_color system
 
-color2  #a0c980
-color10 #9de465
+# Tab bar colors
+active_tab_foreground   #181926
+active_tab_background   #C6A0F6
+inactive_tab_foreground #CAD3F5
+inactive_tab_background #1E2030
+tab_bar_background      #181926
 
-#: green
+# Colors for marks (marked text in the terminal)
+mark1_foreground #24273A
+mark1_background #B7BDF8
+mark2_foreground #24273A
+mark2_background #C6A0F6
+mark3_foreground #24273A
+mark3_background #7DC4E4
 
-color3  #deb974
-color11 #efbe63
+# The 16 terminal colors
 
-#: yellow
+# black
+color0 #494D64
+color8 #5B6078
 
-color4  #6cb6eb
-color12 #5bb9fc
+# red
+color1 #ED8796
+color9 #ED8796
 
-#: blue
+# green
+color2  #A6DA95
+color10 #A6DA95
 
-color5  #d38aea
-color13 #da7cf8
+# yellow
+color3  #EED49F
+color11 #EED49F
 
-#: magenta
+# blue
+color4  #8AADF4
+color12 #8AADF4
 
-color6  #5dbbc1
-color14 #30e2ee
+# magenta
+color5  #F5BDE6
+color13 #F5BDE6
 
-#: cyan
+# cyan
+color6  #8BD5CA
+color14 #8BD5CA
 
-color7  #c5cdd9
-color15 #b2c9ec
-
-#: white
-
-mark1_foreground black
-
-#: Color for marks of type 1
-
-mark1_background #98d3cb
-
-#: Color for marks of type 1 (light steel blue)
-
-mark2_foreground black
-
-#: Color for marks of type 2
-
-mark2_background #f2dcd3
-
-#: Color for marks of type 1 (beige)
-
-mark3_foreground black
-
-#: Color for marks of type 3
-
-mark3_background #f274bc
-
-#: Color for marks of type 1 (violet)
+# white
+color7  #B8C0E0
+color15 #A5ADCB
 
 #: }}}
 
