--- a/helix/config.toml
+++ b/helix/config.toml
@@ -46,7 +46,14 @@ r = "move_char_right"
 t = "move_line_down"
 s = "move_line_up"
 g = { c = "goto_line_start", r = "goto_line_end", h = "no_op", l = "no_op", D = "goto_reference" }
-space = { B = { d = ":buffer-close" }, c = "toggle_comments", w = { c = "jump_view_left", r = "jump_view_right", t = "jump_view_down", s = "jump_view_up", o = "hsplit" } }
+space.B.d = ":buffer-close"
+space.c = "toggle_comments"
+space.w.c = "jump_view_left"
+space.w.r = "jump_view_right"
+space.w.t = "jump_view_down"
+space.w.s = "jump_view_up"
+space.w.o = "hsplit"
+space.z.ret = "split_selection_on_newline"
 "é" = "move_next_word_start"
 "É" = "move_next_long_word_start"
 h = "replace"
@@ -54,8 +61,8 @@ H = "replace_with_yanked"
 l = "change_selection"
 "è" = "select_regex"
 "à" = "find_till_char"
-z = "select_regex"
-Z = "split_selection"
+S = "select_regex"
+z = "split_selection"
 
 [keys.select]
 c = "extend_char_left"
@@ -70,5 +77,5 @@ H = "replace_with_yanked"
 l = "change_selection"
 "è" = "split_selection"
 "à" = "find_till_char"
-z = "select_regex"
-Z = "split_selection"
+S = "select_regex"
+z = "split_selection"
