Update for Kitty and Lf.

--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -645,8 +645,6 @@ dim_opacity 0.75
 #: How much to dim text that has the DIM/FAINT attribute set. One
 #: means no dimming and zero means fully dimmed (i.e. invisible).
 
-
-
 # The basic colors
 foreground              #CAD3F5
 background              #24273A
@@ -1232,6 +1230,8 @@ map kitty_mod+a>l    set_background_opacity -0.1
 map kitty_mod+a>1    set_background_opacity 1
 map kitty_mod+a>d    set_background_opacity default
 map kitty_mod+delete clear_terminal reset active
+
+map kitty_mod+q focus_visible_window
 
 #: You can create shortcuts to clear/reset the terminal. For example::
 
