Update config for Helix and Neovim.

--- a/helix/config.toml
+++ b/helix/config.toml
@@ -45,7 +45,11 @@ c = "move_char_left"
 r = "move_char_right"
 t = "move_line_down"
 s = "move_line_up"
-g = { c = "goto_line_start", r = "goto_line_end", h = "no_op", l = "no_op", D = "goto_reference" }
+g.c = "goto_line_start"
+g.r = "goto_line_end"
+g.h = "no_op"
+g.l = "no_op"
+g.D = "goto_reference"
 space.B.d = ":buffer-close"
 space.c = "toggle_comments"
 space.w.c = "jump_view_left"
@@ -69,7 +73,10 @@ c = "extend_char_left"
 r = "extend_char_right"
 t = "extend_line_down"
 s = "extend_line_up"
-g = { c = "goto_line_start", r = "goto_line_end", h = "no_op", l = "no_op" }
+g.c = "goto_line_start"
+g.r = "goto_line_end"
+g.h = "no_op"
+g.l = "no_op"
 "é" = "move_next_word_start"
 "É" = "move_next_long_word_start"
 h = "replace"
