Kitty, Nushell and Tmux update.

--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -1233,6 +1233,8 @@ map kitty_mod+delete clear_terminal reset active
 
 map kitty_mod+q focus_visible_window
 
+map kitty_mod+g select_tab
+
 #: You can create shortcuts to clear/reset the terminal. For example::
 
 #:     # Reset the terminal
