--- a/helix/config.toml
+++ b/helix/config.toml
@@ -37,8 +37,8 @@ display-messages = true
 
 [editor.statusline]
 left = ["mode", "spinner", "file-name", "file-type", "total-line-numbers", "file-encoding"]
-center = ["selections", "primary-selection-length", "position", "position-percentage"]
-right = ["diagnostics", "workspace-diagnostics"]
+center = []
+right = ["selections", "primary-selection-length", "position", "position-percentage", "diagnostics", "workspace-diagnostics"]
 
 [keys.normal]
 c = "move_char_left"
