gitui, kitty and helix update.

--- a/helix/config.toml
+++ b/helix/config.toml
@@ -67,6 +67,7 @@ l = "change_selection"
 "à" = "find_till_char"
 S = "select_regex"
 z = "split_selection"
+X = "extend_line_above"
 
 [keys.select]
 c = "extend_char_left"
@@ -86,6 +87,7 @@ l = "change_selection"
 "à" = "find_till_char"
 S = "select_regex"
 z = "split_selection"
+X = "extend_line_above"
 
 [keys.insert]
 " " = ["collapse_selection", ":insert-output printf ' '", "move_char_right"]
