--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -146,16 +146,6 @@ box_drawing_scale 0.001, 1, 1.5, 2
 
 #: Cursor customization {{{
 
-cursor #5bb9fc
-
-#: Default cursor color
-
-cursor_text_color #FFFFFF
-
-#: Choose the color of text under the cursor. If you want it rendered
-#: with the background color of the cell underneath instead, use the
-#: special keyword: background
-
 cursor_shape block
 
 #: The cursor shape can be one of (block, beam, underline)
@@ -1282,3 +1272,5 @@ map kitty_mod+g select_tab
 #: }}}
 
 # }}}
+
+include palenight.conf
