--- a/helix/config.toml
+++ b/helix/config.toml
@@ -11,22 +11,22 @@ auto-pairs = true
 rulers = [120]
 idle-timeout = 50
 
-[editor.gutters.diagnostics]
-characters = ""
-
-[editor.gutters.breakpoints.characters]
-verified = "●"
-other = "⊚"
-
-[editor.gutters.diff.characters]
-add = "▏"
-remove = "‾"
-change = "▏"
-
-[editor.cursor-shape]
-insert = "bar"
-normal = "block"
-select = "underline"
+# [editor.gutters.diagnostics]
+# characters = ""
+# 
+# [editor.gutters.breakpoints.characters]
+# verified = "●"
+# other = "⊚"
+# 
+# [editor.gutters.diff.characters]
+# add = "▏"
+# remove = "‾"
+# change = "▏"
+# 
+# [editor.cursor-shape]
+# insert = "bar"
+# normal = "block"
+# select = "underline"
 
 [editor.indent-guides]
 render = true
