--- a/helix/config.toml
+++ b/helix/config.toml
@@ -22,11 +22,11 @@ idle-timeout = 50
 # add = "▏"
 # remove = "‾"
 # change = "▏"
-# 
-# [editor.cursor-shape]
-# insert = "bar"
-# normal = "block"
-# select = "underline"
+
+[editor.cursor-shape]
+insert = "bar"
+normal = "block"
+select = "underline"
 
 [editor.indent-guides]
 render = true
