--- a/helix/config.toml
+++ b/helix/config.toml
@@ -31,7 +31,7 @@ right = ["selections", "primary-selection-length", "position", "position-percent
 
 [keys.normal]
 c = "move_char_left"
-C  = "extend_char_left"
+C = "extend_char_left"
 r = "move_char_right"
 R = "extend_char_right"
 t = "move_line_down"
@@ -39,10 +39,10 @@ T = "extend_line_down"
 s = "move_line_up"
 S = "extend_line_up"
 
-h = "replace"
-H = "replace_with_yanked"
-j = "find_till_char"
-J = "extend_till_char"
+h = "find_till_char"
+H = "extend_till_char"
+j = "replace"
+J = "replace_with_yanked"
 k = "select_regex"
 K = "split_selection"
 l = "change_selection"
@@ -50,13 +50,16 @@ L = "copy_selection_on_next_line"
 
 X = "extend_line_above"
 
+B = "extend_prev_word_start"
+W = "extend_next_word_start"
+
 g.c = "goto_line_start"
 g.r = "goto_line_end"
 g.h = "no_op"
 g.l = "no_op"
 g.D = "goto_reference"
 
-C-K = "split_selection_on_newline"
+C-k = "split_selection_on_newline"
 
 space.B.d = ":buffer-close"
 space.c = "toggle_comments"
