--- a/helix/config.toml
+++ b/helix/config.toml
@@ -49,11 +49,12 @@ l = "change_selection"
 L = "copy_selection_on_next_line"
 
 X = "extend_line_above"
-
 B = "extend_prev_word_start"
 W = "extend_next_word_start"
 
 g.c = "goto_line_start"
+g.s = "goto_file_start"
+g.t = "goto_file_end"
 g.r = "goto_line_end"
 g.h = "no_op"
 g.l = "no_op"
@@ -66,7 +67,6 @@ z.s = "scroll_up"
 Z.t = "scroll_down"
 Z.s = "scroll_up"
 
-space.B.d = ":buffer-close"
 space.c = "toggle_comments"
 space.w.c = "jump_view_left"
 space.w.r = "jump_view_right"
