Helix config. Stil moooooaaaaaar

--- a/helix/config.toml
+++ b/helix/config.toml
@@ -56,6 +56,7 @@ g.c = "goto_line_start"
 g.s = "goto_file_start"
 g.t = "goto_file_end"
 g.r = "goto_line_end"
+g.i = "goto_first_nonwhitespace"
 g.h = "no_op"
 g.l = "no_op"
 g.D = "goto_reference"
