Alacritty + Zellij + tmux + kak update.

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -1,9 +1,10 @@
 set -sg escape-time 0
 set-option -g prefix C-a
-set -g default-terminal "xterm-kitty"
-set-option -ga terminal-overrides ",xterm-kitty:Tc"
+set -g default-terminal "alacritty"
+set-option -ga terminal-overrides ",alacritty:Tc"
 set -g allow-rename on
-set -g set-titles on; set -g set-titles-string "(#h) #T"
+set -g set-titles on
+set -g set-titles-string "(#h) #T"
 setw -g aggressive-resize on
 set -g mouse on
 tmux_conf_copy_to_os_clipboard=true
@@ -61,7 +62,7 @@ set -g status-style fg="$color_white",bg="$color_background"
 set -g status-interval 1
 set -g status-position top
 set -g status-left "#[bg=$color_background]#[fg=$color_green] #S #[bg=$color_background]"
-set -g status-right "#[fg=$color_black]%H:%M:%S #[fg=$color_background]#{prefix_highlight} #(/bin/bash $HOME/code/kube-tmux/kube.tmux 250 red cyan)"
+set -g status-right "#[fg=$color_black]%H:%M:%S #[fg=$color_background]#{prefix_highlight}"
 set -g status-left-length 200
 set -g status-right-length 200
 
