Tmux config for kubernetes.

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -62,7 +62,7 @@ set -g status-style fg="$color_white",bg="$color_background"
 set -g status-interval 1
 set -g status-position top
 set -g status-left "#[bg=$color_background]#[fg=$color_green] #S #[bg=$color_background]"
-set -g status-right "#[fg=$color_black]%H:%M:%S #[fg=$color_background]#{prefix_highlight}"
+set -g status-right "#{?client_prefix,#[fg=$color_magenta]^A,} #(command -v tmux-k8s &> /dev/null && tmux-k8s) #[fg=$color_black]%H:%M:%S"
 set -g status-left-length 200
 set -g status-right-length 200
 
