--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -53,32 +53,28 @@ color_white_light="colour15"
 color_grey="colour250"
 
 # panes
-set -g pane-active-border-style fg="$color_green"
-set -g pane-border-style fg="$color_background"
+set -g pane-active-border-style fg=magenta
+set -g pane-border-style fg=black
 
 # status line
 set -g status-justify left
-set -g status-style fg="$color_white",bg="$color_background"
 set -g status-interval 1
 set -g status-position top
-set -g status-left "#[bg=$color_background]#[fg=$color_green] #S #[bg=$color_background]"
-set -g status-right "#{?client_prefix,#[fg=$color_magenta]^A,} #(command -v tmux-k8s &> /dev/null && tmux-k8s) #[fg=$color_black]%H:%M:%S"
+set -g status-left " #[bg=default]#[fg=brightred]#S #[fg=black]| "
+set -g status-right "#{?client_prefix,#[fg=magenta]^A,} #(command -v tmux-k8s &> /dev/null && tmux-k8s) #[fg=red]#H #[fg=black]%H:%M:%S"
 set -g status-left-length 200
 set -g status-right-length 200
 
 # messaging
-set -g message-style bg="$color_yellow",fg="$color_black"
+set -g message-style bg=yellow,fg=black
 set -g message-command-style bg=black,fg=blue
 
 # window mode
-setw -g mode-style bg="$color_green",fg="$color_background"
+setw -g mode-style bg=magenta,fg=black
 
 # window status
-setw -g window-status-current-style bg="$color_blue_light"
-setw -g window-status-current-format " #[fg=$color_background]#W#[fg=$color_black]#F "
-
-setw -g window-status-style fg="$color_black"
-setw -g window-status-format "#[fg=$color_blue]#I#[fg=$color_black]:#[fg=$color_black]#W#[fg=$color_green]#F"
+setw -g window-status-current-format "#[fg=brightblue]#I#[fg=magenta]:#[fg=green]#W#[fg=magenta]#F"
+setw -g window-status-format         "#[fg=blue]#I#[fg=black]:#[fg=black]#W#[fg=brightmagenta]#F"
 
 setw -g window-status-bell-style fg="$color_red_light",bg="$color_black"
 
