--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -61,7 +61,7 @@ set -g status-justify left
 set -g status-interval 1
 set -g status-position top
 set -g status-left " #[bg=default]#[fg=brightred]#S #[fg=black]| "
-set -g status-right "#{?client_prefix,#[fg=magenta]^A,} #(command -v tmux-k8s &> /dev/null && tmux-k8s) #[fg=red]#H #[fg=default]%H:%M:%S"
+set -g status-right "#{?client_prefix,#[fg=magenta]^A#[fg=black] |,} #[fg=yellow]#{pane_current_path}#[fg=black] | #[fg=magenta]#{pane_current_command}#[fg=black] | #(command -v tmux-k8s &> /dev/null && tmux-k8s) #[fg=default]%H:%M:%S"
 set -g status-left-length 200
 set -g status-right-length 200
 
