More tmux config.

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -31,27 +31,6 @@ bind-key    -T copy-mode-vi r send-keys -X cursor-right
 bind-key    -T prefix g set -g status
 bind -n WheelUpPane copy-mode
 
-# Visual tweaks
-
-color_background="#2f3242"
-color_background_light="#333645"
-color_black="colour8"
-color_red="colour1"
-color_red_light="colour9"
-color_green="colour2"
-color_green_light="colour10"
-color_yellow="colour3"
-color_yellow_light="colour11"
-color_blue="colour4"
-color_blue_light="colour12"
-color_magenta="colour5"
-color_magenta_light="colour13"
-color_cyan="colour6"
-color_cyan_light="colour14"
-color_white="colour7"
-color_white_light="colour15"
-color_grey="colour250"
-
 # panes
 set -g pane-active-border-style fg=magenta
 set -g pane-border-style fg=black
@@ -61,21 +40,20 @@ set -g status-justify left
 set -g status-interval 1
 set -g status-position top
 set -g status-left " #[bg=default]#[fg=brightred]#S #[fg=black]| "
-set -g status-right "#{?client_prefix,#[fg=magenta]^A#[fg=black] |,} #[fg=yellow]#{pane_current_path}#[fg=black] | #[fg=magenta]#{pane_current_command}#[fg=black] | #(command -v tmux-k8s &> /dev/null && tmux-k8s) #[fg=default]%H:%M:%S"
+set -g status-right "#{?client_prefix,#[fg=magenta]^A#[fg=black] |,} #(command -v tmux-tasks &> /dev/null && tmux-tasks)#[fg=black] | #(command -v tmux-k8s &> /dev/null && tmux-k8s) #[fg=default]%H:%M:%S"
 set -g status-left-length 200
 set -g status-right-length 200
 
 # messaging
 set -g message-style bg=yellow,fg=black
 set -g message-command-style bg=black,fg=blue
+set -g message-style fg=green
 
 # window mode
 setw -g mode-style bg=magenta,fg=black
 
 # window status
 setw -g window-status-current-format "#[fg=brightblue]#I#[fg=magenta]:#[fg=green]#W#[fg=magenta]#F"
-setw -g window-status-format         "#[fg=blue]#I#[fg=black]:#[fg=black]#W#[fg=brightmagenta]#F"
+setw -g window-status-format "#[fg=blue]#I#[fg=black]:#[fg=black]#W#[fg=brightmagenta]#F"
+setw -g window-status-bell-style fg=brightred
 
-setw -g window-status-bell-style fg="$color_red_light",bg="$color_black"
-
-set -g message-style fg="$color_green",bg="$color_background"
