--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -50,7 +50,7 @@ set -g message-command-style bg=black,fg=blue
 set -g message-style fg=green
 
 # window mode
-setw -g mode-style bg=magenta,fg=black
+setw -g mode-style bg=red,fg=black
 
 # window status
 setw -g window-status-current-format "#[fg=brightblue]#I#[fg=magenta]:#[fg=green]#W#[fg=magenta]#F"
