--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -11,15 +11,16 @@ tmux_conf_copy_to_os_clipboard=true
 
 # key bindings
 set-window-option -g mode-keys vi
-bind -T prefix q display-panes -d 0
+bind        -T prefix q display-panes -d 0
 bind-key    -T prefix w choose-session
 bind-key    -T prefix Space new-window
 bind-key    -T prefix c select-pane -L
 bind-key    -T prefix t select-pane -D
 bind-key    -T prefix s select-pane -U
 bind-key    -T prefix r select-pane -R
-bind-key    -T prefix o split-window
+bind-key    -T prefix o split-wind
 bind-key    -T prefix v split-window -h
+bind-key    -T prefix f display-popup -T "Switch to session" "tmux ls -F #S | sk | xargs tmux switch-client -t"
 bind-key -r -T prefix M-s resize-pane -U 5
 bind-key -r -T prefix M-t resize-pane -D 5
 bind-key -r -T prefix M-c resize-pane -L 5
@@ -29,7 +30,6 @@ bind-key    -T copy-mode-vi t send-keys -X cursor-down
 bind-key    -T copy-mode-vi s send-keys -X cursor-up
 bind-key    -T copy-mode-vi r send-keys -X cursor-right
 bind-key    -T prefix g set -g status
-bind -n WheelUpPane copy-mode
 
 # panes
 set -g pane-active-border-style fg=magenta
@@ -41,7 +41,7 @@ set -g status-style fg=default,bg=default
 set -g status-interval 1
 set -g status-position top
 set -g status-left " #[bg=default]#[fg=brightred]#S #[fg=black]| "
-set -g status-right "#{?client_prefix,#[fg=magenta]^A#[fg=black] | ,}#[fg=cyan]#{pane_current_command} #[fg=black]| #(command -v tmux-tasks &> /dev/null && tmux-tasks)#(command -v tmux-k8s &> /dev/null && tmux-k8s)#[fg=default]%H:%M:%S"
+set -g status-right "#{?client_prefix,#[fg=magenta]^A#[fg=black] | ,}#[fg=cyan]#{pane_current_command} #[fg=black]| #(command -v tmux-tasks &> /dev/null && tmux-tasks)#(command -v tmux-k8s &> /dev/null && tmux-k8s) #[fg=default]%H:%M:%S"
 set -g status-left-length 200
 set -g status-right-length 200
 
