--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -21,6 +21,7 @@ bind-key    -T prefix r select-pane -R
 bind-key    -T prefix o split-wind
 bind-key    -T prefix v split-window -h
 bind-key    -T prefix f display-popup -T "Switch to session" "tmux ls -F #S | sk | xargs tmux switch-client -t"
+bind-key    -T prefix h menu -T Mind Backlog b "popup -T Backlog \"mind paths -s '/Tasks/Backlog'\"" On-going o "popup -ET On-going \"mind paths -s '/Tasks/On-going'\"" Link l "popup -T Link \"mind get -oui\""
 bind-key -r -T prefix M-s resize-pane -U 5
 bind-key -r -T prefix M-t resize-pane -D 5
 bind-key -r -T prefix M-c resize-pane -L 5
