--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -44,7 +44,7 @@ set -g status-style fg=default,bg=default
 set -g status-interval 1
 set -g status-position top
 set -g status-left " #[bg=default]#[fg=brightred]#S #[fg=black]| "
-set -g status-right "#{?client_prefix,#[fg=magenta]^A#[fg=black] | ,}#[fg=green]#{pane_title} #[fg=black]| #(command -v tmux-tasks &> /dev/null && tmux-tasks)#(command -v tmux-k8s &> /dev/null && tmux-k8s) #[fg=default]%H:%M:%S"
+set -g status-right "#{?client_prefix,#[fg=magenta]^A#[fg=black] | ,}#[fg=green]#{pane_current_command} #[fg=black]| #(command -v tmux-tasks &> /dev/null && tmux-tasks)#(command -v tmux-k8s &> /dev/null && tmux-k8s) #[fg=default]%H:%M:%S"
 set -g status-left-length 200
 set -g status-right-length 200
 
