--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -1,8 +1,8 @@
 set -sg escape-time 0
 set-option -g prefix C-a
 set-option -g prefix2 C-a
-set -g default-terminal "xterm-kitty"
-set-option -ga terminal-overrides ",xterm-kitty:Tc"
+set -g default-terminal "alacritty"
+set-option -ga terminal-overrides ",alacritty:Tc"
 set -g allow-rename on
 set -g set-titles on
 set -g set-titles-string "(#h) #T"
