--- a/alacritty/alacritty.toml
+++ b/alacritty/alacritty.toml
@@ -14,7 +14,7 @@ style = "Thin"
 save_to_clipboard = true
 
 [window]
-option_as_alt = "OnlyLeft"
+option_as_alt = "OnlyRight"
 
 [mouse]
 hide_when_typing = true
