Allow to open stuff with Alacritty on macOS.

--- a/alacritty/alacritty-macOS.toml
+++ b/alacritty/alacritty-macOS.toml
@@ -28,3 +28,10 @@ hyperlinks = true
 action = "Copy"
 binding.key = "w"
 binding.mods = "Control | Shift"
+
+[[hints.enabled]]
+regex = "(https?|file)://[^ ]+"
+hyperlinks = true
+command = "open"
+binding.key = "o"
+binding.mods = "Control | Shift"
