--- a/alacritty/alacritty.toml
+++ b/alacritty/alacritty.toml
@@ -25,3 +25,10 @@ hyperlinks = true
 action = "Copy"
 binding.key = "w"
 binding.mods = "Control | Shift"
+
+[[hints.enabled]]
+regex = "(https?|file)://[^ ]+"
+hyperlinks = true
+command = "open"
+binding.key = "o"
+binding.mods = "Control | Shift"
