--- a/alacritty/themes/catppuccin.toml
+++ b/alacritty/themes/catppuccin.toml
@@ -23,7 +23,7 @@ white = "0x828282"
 yellow = "#E5C07B"
 
 [colors.normal]
-black = "#181A1F"
+black = "#5B6078"
 blue = "#61AFEF"
 cyan = "#54AFBC"
 green = "#98C379"
