--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -40,7 +40,7 @@ set -g pane-border-style fg=black
 
 # status line
 set -g status-justify left
-set -g status-style fg=default,bg=default
+set -g status-style fg=default,bg=#1e2030
 set -g status-interval 1
 set -g status-position top
 set -g status-left "#[fg=red] #S #[fg=black]| "
