--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -44,7 +44,7 @@ set -g status-style fg=default,bg=#1e2030
 set -g status-interval 1
 set -g status-position top
 set -g status-left "#[fg=red] #S #[fg=black]| "
-set -g status-right "#{?client_prefix,#[fg=magenta]^A#[fg=black] | ,}#[fg=green]󰘔 #{pane_current_command} #[fg=black]| #[fg=white]󰀄 #{user}@#H #[fg=black]| #(command -v tmux-k8s &> /dev/null && tmux-k8s)#[fg=cyan]󰥔 %a %b %d %Y#[fg=black], #[fg=cyan]%H#[fg=black]:#[fg=cyan]%M#[fg=black]:#[fg=cyan]%S"
+set -g status-right "#{?client_prefix,#[fg=magenta]^A#[fg=black] | ,}#[fg=green]󰘔 #{pane_current_command} #[fg=black]| #(command -v tmux-k8s &> /dev/null && tmux-k8s)"
 set -g status-left-length 200
 set -g status-right-length 200
 
