Update tmux config.

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -43,7 +43,7 @@ set -g status-justify left
 set -g status-style fg=default,bg=#1e2030
 set -g status-interval 1
 set -g status-position top
-set -g status-left "#[fg=red] #S #[fg=black]| "
+set -g status-left "#[fg=red] #S #[fg=black]| "
 set -g status-right "#{?client_prefix,#[fg=magenta]^A#[fg=black] | ,}#[fg=green]󰘔 #{pane_current_command} #[fg=black]| #(command -v tmux-k8s &> /dev/null && tmux-k8s)"
 set -g status-left-length 200
 set -g status-right-length 200
@@ -57,7 +57,7 @@ set -g message-style fg=green
 setw -g mode-style bg=red,fg=black
 
 # window status
-setw -g window-status-current-format "#[fg=brightblue]#I#[fg=magenta]:#[fg=green]#W#[fg=magenta]#F"
-setw -g window-status-format "#[fg=blue]#I#[fg=black]:#[fg=black]#W#[fg=brightmagenta]#F"
+setw -g window-status-current-format "#[fg=brightblue]#I#[fg=black]:#[fg=green]#W#[fg=cyan]#F"
+setw -g window-status-format "#[fg=black]#I:#W#F"
 setw -g window-status-bell-style fg=brightred
 
