Clean up tmux config.

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -21,9 +21,8 @@ bind-key    -T prefix s select-pane -U
 bind-key    -T prefix r select-pane -R
 bind-key    -T prefix o split-wind
 bind-key    -T prefix v split-window -h
-bind-key    -T prefix j display-popup -w 75% -h 75% -ET "Journal" "kak -e kak-notes-journal-open-daily"
 bind-key    -T prefix f display-popup -T "Switch to session" "tmux ls -F #S | sk | xargs tmux switch-client -t"
-bind-key    -T prefix h menu -T Mind Backlog b "popup -T Backlog \"mind paths -s '/Tasks/Backlog'\"" On-going o "popup -T On-going \"mind paths -s '/Tasks/On-going'\"" Link l "popup -ET Link \"mind get -oui\"" TUI t "mind-tui" Capture c "popup -h3 -ET Capture capture"
+bind-key    -T prefix j menu -T Notes Capture c "popup -ET Capture 'kak -e kak-notes-capture'" Journal j "popup -w 75% -h 75% -ET 'Journal' 'kak -e kak-notes-journal-open-daily'"
 bind-key -r -T prefix M-s resize-pane -U 5
 bind-key -r -T prefix M-t resize-pane -D 5
 bind-key -r -T prefix M-c resize-pane -L 5
