Fix various things about kak-lsp, tmux and gs.

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -21,7 +21,7 @@ bind-key    -T prefix s select-pane -U
 bind-key    -T prefix r select-pane -R
 bind-key    -T prefix o split-wind
 bind-key    -T prefix v split-window -h
-bind-key    -T prefix f display-popup -T "Switch to session" "tmux-session-switch"
+bind-key    -T prefix f display-popup -E "tmux attach -t popup || tmux new -s popup"
 bind-key    -T prefix j menu -T Notes Capture c "popup -ET Capture 'kak -e kak-notes-capture'" Journal j "popup -w 75% -h 75% -ET 'Journal' 'kak -e kak-notes-journal-open-daily'"
 bind-key -r -T prefix M-s resize-pane -U 5
 bind-key -r -T prefix M-t resize-pane -D 5
