--- a/kak-lsp/kak-lsp.toml
+++ b/kak-lsp/kak-lsp.toml
@@ -340,21 +340,12 @@ command = "rnix-lsp"
 [language_server.rust-analyzer]
 filetypes = ["rust"]
 roots = ["Cargo.toml"]
-command = "sh"
-args = [
-    "-c",
-    """
-        if path=$(rustup which rust-analyzer 2>/dev/null); then
-            "$path"
-        else
-            rust-analyzer
-        fi
-    """,
-]
+command = "rust-analyzer"
+
 [language_server.rust-analyzer.settings.rust-analyzer]
-check.command = "clippy"
 # See https://rust-analyzer.github.io/manual.html#configuration
-cargo.features = ["all"]
+check.command = "clippy"
+cargo.features = "all"
 
 [language_server.solargraph]
 filetypes = ["ruby"]
