Hypr / Waybar config.

--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -142,7 +142,7 @@ $mainMod = SUPER
 
 # Example binds, see https://wiki.hyprland.org/Configuring/Binds/ for more
 bind = $mainMod, return, exec, $terminal
-bind = $mainMod, X, killactive, 
+bind = $mainMod SHIFT, Q, killactive, 
 bind = $mainMod, M, exit, 
 bind = $mainMod, E, exec, $fileManager
 bind = $mainMod, I, exec, $menu
