--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -19,7 +19,8 @@ monitor=,preferred,auto,auto
 # See https://wiki.hyprland.org/Configuring/Keywords/ for more
 
 # Execute your favorite apps at launch
-# exec-once = waybar & hyprpaper & firefox
+exec-once = waybar
+exec-once = hyprpaper
 
 # Source a file (multi-file configs)
 # source = ~/.config/hypr/myColors.conf
@@ -143,7 +144,7 @@ $mainMod = SUPER
 # Example binds, see https://wiki.hyprland.org/Configuring/Binds/ for more
 bind = $mainMod, return, exec, $terminal
 bind = $mainMod SHIFT, Q, killactive, 
-bind = $mainMod, M, exit, 
+bind = $mainMod SHIFT, M, exit, 
 bind = $mainMod, E, exec, $fileManager
 bind = $mainMod, I, exec, $menu
 bind = $mainMod, P, pseudo, # dwindle
