--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -34,7 +34,7 @@ bind-key    -T copy-mode-vi r send-keys -X cursor-right
 bind-key    -T prefix g set -g status
 
 # panes
-set -g pane-active-border-style fg=magenta
+set -g pane-active-border-style fg=green
 set -g pane-border-style fg=black
 
 # status line
